# portable-bike-perception-rpi-ros2

./: .gitmodules  CHANGELOG.md  CONTRIBUTORS.md  Dockerfile  NOTICE.md  README.md  TODO  index.html  network.md  notes.txt  package.xml  requirements.txt  run.sh  script.sh  setup.cfg  setup.py
core/: README  README.md  cyclosafe.md
core/scripts/: README  README.md  battery_monitor  battery_monitor.py  gpio  gpio.py  gpio.sh  gps_time.sh  launch_wrapper.sh
core/setup/: .bashrc  .env  README  README.md  cmdline.txt  config.txt  install.sh  ip_config.sh  ros_install.sh  setup_services.sh
core/setup/systemd/: README  README.md  clean_service.sh  cyclosafed.service  gpiod.service  gps_time.service  pigpiod.service  setup_services.sh
core/src/cyclosafe/: README  README.html  README.md  package.xml  setup.py
core/src/cyclosafe/cyclosafe/: __init__.py  camera_pi.py  camera_webcam.py  gps.py  sonar.py  sonar_rs232.py  tof_lidar.py
core/src/cyclosafe/cyclosafe/src/: ACamera.py  ASerialSensor.py  Config.py
core/src/cyclosafe/launch/: config.py  cyclosafe.launch.py
core/src/cyclosafe/urdf/: model.urdf.xml
core/src/cyclosafe/urdf/model/: tf-02.stl
core/src/cyclosafe_config/: README.md  package.xml  setup.cfg  setup.py
core/src/cyclosafe_config/cyclosafe_config/: Config.py  __init__.py
core/src/cyclosafe_hub/: README.md  package.xml
core/src/cyclosafe_hub/include/: Hub.hpp  TTLDeque.hpp
core/src/cyclosafe_interfaces/: README.md  package.xml
core/src/cyclosafe_interfaces/msg/: NavSatInfo.msg
core/src/cyclosafe_interfaces/srv/: SaveImages.srv
core/src/cyclosafe_lidar/: README.md  package.xml
core/src/cyclosafe_lidar/include/: BenewakeDriver.hpp  Serial.hpp  Utils.hpp
core/src/cyclosafe_lidar/src/: lidar_node.cpp
cyclosafe/: camera.py  camera_cv.py  package.xml  sensor.py  setup.py
cyclosafe/cyclosafe/: aggregator.py  battery_monitor.py  camera_pi.py  camera_webcam.py  geometry_sonar.py  gpio.py  gps.py  gps_converter.py  image_viewer.py  notes.txt  range_circle_transform.py  sensor.py  sonar.py  sonar_lv_pw.py  sonar_rs232.py  sonar_sr04.py  tof_lidar.py
cyclosafe/cyclosafe/src/: ACamera.py  ASerialSensor.py  acamera.py
cyclosafe/launch/: config.py  cyclosafe.launch.py  ldlidar_bringup.launch.py  ldlidar_with_mgr.launch.py  multi_sensor.launch.py  test_config.launch.py  view.rviz  viewer.launch.py
cyclosafe/scripts/: battery_monitor.py  gpio.py  gpio.sh  import_recordings.py
cyclosafe/urdf/model/: tf-mini-plus.stl
cyclosafe_hub/: CMakeLists.txt  package.xml
cyclosafe_hub/include/: Hub.hpp  TTLDeque.hpp  hub.hpp
cyclosafe_hub/src/: Hub.cpp  hub.cpp
cyclosafe_interfaces/: CMakeLists.txt  package.xml
cyclosafe_interfaces/srv/: SaveImages.srv
cyclosafe_lidar/: CMakeLists.txt  package.xml
cyclosafe_lidar/include/: BenewakeDriver.hpp  Exceptions.hpp  Serial.hpp  Utils.hpp
cyclosafe_lidar/src/: Serial.cpp  Utils.cpp  lidar_node.cpp  main.cpp
cyclosafe_player/: package.xml  setup.py
cyclosafe_player/cyclosafe_player/: player.py
cyclosafe_player/cyclosafe_player/src/: BagReader.py  Csv.py  GraphWidget.py  Marker.py  PeakDetection.py  PlayerWindow.py
design/: README.md  bom.csv
design/docs/3D-print/: assemblage-F.stl  boitier-bas.stl  boitier-haut.stl  collier.stl  couvercle-sd.stl  locking-pin.stl
design/kicad/: .gitignore  fp-info-cache  fp-lib-table  kicad.kicad_pcb  kicad.kicad_prl  kicad.kicad_pro  kicad.kicad_sch  kicad.kicad_sch-bak  sym-lib-table  ups-unit.kicad_sch
design/kicad/libs/easyeda/: easyeda.kicad_sym
design/kicad/libs/easyeda/easyeda.pretty/: ESOP-8_L4.9-W3.9-P1.27-LS6.0-BL-EP.kicad_mod  (+4 more)
design/kicad/libs/easyeda2kicad/: easyeda2kicad.bak  easyeda2kicad.kicad_sym
scripts/: README  README.md  compressed_image_extraction.py  gps_csv_converter.py  gpx_exporter.py  import_recordings.py  lidar_csv_converter.py  liddar_csv_converter.py  sd_flash.sh
viewer/: README  README.md  ROS2.md
viewer/cyclosafe_player/cyclosafe_player/src/: PeakDetection.py
viewer/cyclosafe_viewer/launch/: config.py  viewer.launch.py
viewer/setup/: .bashrc  .env  .env.template
viewer/src/: cyclosafe_config  cyclosafe_interfaces
viewer/src/cyclosafe_player/: README.md  package.xml  setup.cfg
viewer/src/cyclosafe_player/cyclosafe_player/: player.py
viewer/src/cyclosafe_viewer/: README.md  package.xml  setup.cfg  setup.py
viewer/src/cyclosafe_viewer/cyclosafe_viewer/: gps_converter.py  range_circle_transform.py
viewer/src/cyclosafe_viewer/launch/: config.py  view.rviz  viewer.launch.py
viewer/src/cyclosafe_viewer/urdf/: model.urdf.inverted.xml  model.urdf.xml
viewer/src/cyclosafe_viewer/urdf/model/: module.mtl
(+41 files in other folders)
