<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cyclosafe</name>
  <version>0.0.1</version>
  <description> Contient les différents nodes du projet cyclosafe</description>
  <license>TODO: License declaration</license>
  <maintainer email="pirard.nicolas@hotmail.fr">Nicolas Pirard</maintainer>
  <author>Nicolas Pirard</author>
  <author email="pirard.nicolas@hotmail.fr">Nicolas Pirard</author>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!-- <build_depend>message_generation</build_depend> -->
  <!-- <build_depend>rostest</build_depend> -->
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cyclosafe_interfaces</build_depend>

  <!-- <run_depend>message_runtime</run_depend> -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>python3-serial</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>python3-pigpio</exec_depend>
  <exec_depend>ldlidar_component</exec_depend>
  <exec_depend>python3-smbus</exec_depend>
  <!-- <exec_depend>picamera2</exec_depend> -->

  <depend>robot_state_publisher</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
