<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cyclosafe_viewer</name>
  <version>0.0.0</version>
  <description>Contain launch main launch description to visualize cyclosafe data and python node for topic transformation + geometry node</description>
  <maintainer email="pirard.nicolas@hotmail.fr">npirard</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!-- <build_depend>cyclosafe_interfaces</build_depend> -->
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <depend>robot_state_publisher</depend>
  <depend>rclpy</depend>
  <depend>python3-rich</depend>
  <depend>python3-pandas</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
